Add secrets to sandbox create API
